# 6-axis-Robot-Arm

./: README.md
src/: robot_arm.py
src/camera_calibration/: calibration.py  camera_interface.py  main_calibration.py  robot_controller.py
src/camera_calibration/tests/: test_calibration.py
src/six_axis_robot/: CMakeLists.txt  package.xml
src/six_axis_robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/six_axis_robot/install/six_axis_robot/share/ament_index/resource_index/package_run_dependencies/: six_axis_robot
src/six_axis_robot/install/six_axis_robot/share/six_axis_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/six_axis_robot/install/six_axis_robot/share/six_axis_robot/launch/: robot_6_dof.launch.py
src/six_axis_robot/install/six_axis_robot/share/six_axis_robot/urdf/: robot_model_6_dof.urdf.xacro
src/six_axis_robot/launch/: robot_6_dof.launch.py
src/six_axis_robot/log/: latest_build
src/six_axis_robot/scripts/: robot_arm_publisher.py
src/six_axis_robot/urdf/: robot_model_6_dof.urdf.xacro
src/six_axis_robot/urdf/install/: local_setup.sh  setup.sh
src/six_axis_robot/urdf/log/: latest_build
src/six_axis_robotarm/: robot_arm.py
