<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>six_axis_robot</name>
  <version>0.0.0</version>
  <description>6-axis robot arm control package using ROS2 (scripts-based installation).</description>
  <maintainer email="your.smannem40@gmail.com">sukumar7</maintainer>
  <license>Apache-2.0</license>

  <!-- Build Tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Execution Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


